// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/carousel/demo/arrows.tsx correctly 1`] = `
Array [
  <div
    class="ant-carousel css-var-test-id"
  >
    <div
      class="slick-slider slick-initialized"
      dir="ltr"
    >
      <button
        aria-label="prev"
        class="slick-arrow slick-prev slick-disabled"
        data-role="none"
        style="display:block"
        type="button"
      />
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="width:400%;left:0%"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  1
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="1"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  2
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="2"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  3
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="3"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  4
                </h3>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="next"
        class="slick-arrow slick-next"
        data-role="none"
        style="display:block"
        type="button"
      />
      <ul
        class="slick-dots slick-dots-bottom"
        style="display:block"
      >
        <li
          class="slick-active"
        >
          <button>
            1
          </button>
        </li>
        <li
          class=""
        >
          <button>
            2
          </button>
        </li>
        <li
          class=""
        >
          <button>
            3
          </button>
        </li>
        <li
          class=""
        >
          <button>
            4
          </button>
        </li>
      </ul>
    </div>
  </div>,
  <br />,
  <div
    class="ant-carousel ant-carousel-vertical css-var-test-id"
  >
    <div
      class="slick-slider slick-vertical slick-initialized"
      dir="ltr"
    >
      <button
        aria-label="prev"
        class="slick-arrow slick-prev slick-disabled"
        data-role="none"
        style="display:block"
        type="button"
      />
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="width:400%;left:0%"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  1
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="1"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  2
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="2"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  3
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="3"
            style="outline:none;width:25%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  4
                </h3>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        aria-label="next"
        class="slick-arrow slick-next"
        data-role="none"
        style="display:block"
        type="button"
      />
      <ul
        class="slick-dots slick-dots-start"
        style="display:block"
      >
        <li
          class="slick-active"
        >
          <button>
            1
          </button>
        </li>
        <li
          class=""
        >
          <button>
            2
          </button>
        </li>
        <li
          class=""
        >
          <button>
            3
          </button>
        </li>
        <li
          class=""
        >
          <button>
            4
          </button>
        </li>
      </ul>
    </div>
  </div>,
]
`;

exports[`renders components/carousel/demo/autoplay.tsx correctly 1`] = `
<div
  class="ant-carousel css-var-test-id"
>
  <div
    class="slick-slider slick-initialized"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="width:600%;left:-100%"
      >
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="-1"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="1"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                2
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="2"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                3
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="3"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="4"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="slick-dots slick-dots-bottom"
      style="display:block"
    >
      <li
        class="slick-active"
      >
        <button>
          1
        </button>
      </li>
      <li
        class=""
      >
        <button>
          2
        </button>
      </li>
      <li
        class=""
      >
        <button>
          3
        </button>
      </li>
      <li
        class=""
      >
        <button>
          4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/carousel/demo/basic.tsx correctly 1`] = `
<div
  class="ant-carousel css-var-test-id"
>
  <div
    class="slick-slider slick-initialized"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="width:600%;left:-100%"
      >
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="-1"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="1"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                2
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="2"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                3
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="3"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="4"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="slick-dots slick-dots-bottom"
      style="display:block"
    >
      <li
        class="slick-active"
      >
        <button>
          1
        </button>
      </li>
      <li
        class=""
      >
        <button>
          2
        </button>
      </li>
      <li
        class=""
      >
        <button>
          3
        </button>
      </li>
      <li
        class=""
      >
        <button>
          4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/carousel/demo/component-token.tsx correctly 1`] = `
<div
  class="ant-carousel css-var-test-id"
>
  <div
    class="slick-slider slick-initialized"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="width:600%;left:-100%"
      >
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="-1"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="1"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                2
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="2"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                3
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="3"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="4"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="slick-dots slick-dots-bottom"
      style="display:block"
    >
      <li
        class="slick-active"
      >
        <button>
          1
        </button>
      </li>
      <li
        class=""
      >
        <button>
          2
        </button>
      </li>
      <li
        class=""
      >
        <button>
          3
        </button>
      </li>
      <li
        class=""
      >
        <button>
          4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/carousel/demo/dot-duration.tsx correctly 1`] = `
<div
  class="ant-carousel css-var-test-id"
  style="--dot-duration:5000ms"
>
  <div
    class="slick-slider slick-initialized"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="width:600%;left:-100%"
      >
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="-1"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="1"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                2
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="2"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                3
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="3"
          style="outline:none;width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide slick-cloned"
          data-index="4"
          style="width:16.666666666666668%"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="slick-dots slick-dots-bottom"
      style="display:block"
    >
      <li
        class="slick-active"
      >
        <button>
          1
        </button>
      </li>
      <li
        class=""
      >
        <button>
          2
        </button>
      </li>
      <li
        class=""
      >
        <button>
          3
        </button>
      </li>
      <li
        class=""
      >
        <button>
          4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/carousel/demo/fade.tsx correctly 1`] = `
<div
  class="ant-carousel css-var-test-id"
>
  <div
    class="slick-slider slick-initialized"
    dir="ltr"
  >
    <div
      class="slick-list"
    >
      <div
        class="slick-track"
        style="width:600%;left:-100%"
      >
        <div
          aria-hidden="false"
          class="slick-slide slick-active slick-current"
          data-index="0"
          style="outline:none;width:16.666666666666668%;position:relative;left:0;opacity:1;z-index:999;transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                1
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="1"
          style="outline:none;width:16.666666666666668%;position:relative;left:-16px;opacity:0;z-index:998;transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                2
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="2"
          style="outline:none;width:16.666666666666668%;position:relative;left:-32px;opacity:0;z-index:998;transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                3
              </h3>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          class="slick-slide"
          data-index="3"
          style="outline:none;width:16.666666666666668%;position:relative;left:-48px;opacity:0;z-index:998;transition:opacity 500ms ease, visibility 500ms ease"
          tabindex="-1"
        >
          <div>
            <div
              style="width:100%;display:inline-block"
              tabindex="-1"
            >
              <h3
                style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
              >
                4
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="slick-dots slick-dots-bottom"
      style="display:block"
    >
      <li
        class="slick-active"
      >
        <button>
          1
        </button>
      </li>
      <li
        class=""
      >
        <button>
          2
        </button>
      </li>
      <li
        class=""
      >
        <button>
          3
        </button>
      </li>
      <li
        class=""
      >
        <button>
          4
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders components/carousel/demo/placement.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline css-var-test-id ant-radio-css-var"
    role="radiogroup"
    style="margin-bottom:8px"
  >
    <label
      class="ant-radio-button-wrapper ant-radio-button-wrapper-checked css-var-test-id ant-radio-css-var"
    >
      <span
        class="ant-radio-button ant-radio-button-checked"
      >
        <input
          checked=""
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="top"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        Top
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper css-var-test-id ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="bottom"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        Bottom
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper css-var-test-id ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="start"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        Start
      </span>
    </label>
    <label
      class="ant-radio-button-wrapper css-var-test-id ant-radio-css-var"
    >
      <span
        class="ant-radio-button"
      >
        <input
          class="ant-radio-button-input"
          name="test-id"
          type="radio"
          value="end"
        />
      </span>
      <span
        class="ant-radio-button-label"
      >
        End
      </span>
    </label>
  </div>,
  <div
    class="ant-carousel css-var-test-id"
  >
    <div
      class="slick-slider slick-initialized"
      dir="ltr"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="width:600%;left:-100%"
        >
          <div
            aria-hidden="true"
            class="slick-slide slick-cloned"
            data-index="-1"
            style="width:16.666666666666668%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  4
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline:none;width:16.666666666666668%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  1
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="1"
            style="outline:none;width:16.666666666666668%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  2
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="2"
            style="outline:none;width:16.666666666666668%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  3
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide"
            data-index="3"
            style="outline:none;width:16.666666666666668%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  4
                </h3>
              </div>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="slick-slide slick-cloned"
            data-index="4"
            style="width:16.666666666666668%"
            tabindex="-1"
          >
            <div>
              <div
                style="width:100%;display:inline-block"
                tabindex="-1"
              >
                <h3
                  style="margin:0;height:160px;color:#fff;line-height:160px;text-align:center;background:#364d79"
                >
                  1
                </h3>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        class="slick-dots slick-dots-top"
        style="display:block"
      >
        <li
          class="slick-active"
        >
          <button>
            1
          </button>
        </li>
        <li
          class=""
        >
          <button>
            2
          </button>
        </li>
        <li
          class=""
        >
          <button>
            3
          </button>
        </li>
        <li
          class=""
        >
          <button>
            4
          </button>
        </li>
      </ul>
    </div>
  </div>,
]
`;
